org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/ItemUsage_invalid.sysml.xt
//* 
XPECT_SETUP org.omg.sysml.xpect.tests.validation.invalid.SysMLTests
	ResourceSet {
		ThisFile {}
		File {from ="/library.kernel/Base.kerml"}
		File {from ="/library.kernel/Occurrences.kerml"}
		File {from ="/library.kernel/Objects.kerml"}
		File {from ="/library.kernel/Performances.kerml"}
		File {from ="/library.kernel/ControlPerformances.kerml"}
		File {from ="/library.kernel/TransitionPerformances.kerml"}
		File {from ="/library.kernel/ScalarValues.kerml"}
		File {from ="/library.systems/Items.sysml"}
		File {from ="/library.systems/Parts.sysml"}
		File {from ="/library.systems/Ports.sysml"}
		File {from ="/library.systems/Actions.sysml"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library.kernel/Base.kerml"}
				File {from ="/library.kernel/Occurrences.kerml"}
				File {from ="/library.kernel/Objects.kerml"}
				File {from ="/library.kernel/Performances.kerml"}
				File {from ="/library.kernel/ControlPerformances.kerml"}
				File {from ="/library.kernel/TransitionPerformances.kerml"}
				File {from ="/library.kernel/ScalarValues.kerml"}
				File {from ="/library.systems/Items.sysml"}
				File {from ="/library.systems/Parts.sysml"}
				File {from ="/library.systems/Ports.sysml"}
				File {from ="/library.systems/Actions.sysml"}
			}
		}
	}
END_SETUP 
*/
package pkg {
	import ScalarValues::*;
	item def A {
		// XPECT errors --> "An item usage must be typed by item definitions." at "item areal: Real;"
		item areal: Real;
		// XPECT errors --> "An item usage must be typed by item definitions." at "item avalue: aValue;"
		item avalue: aValue;
		// XPECT errors --> "An item usage must be typed by item definitions." at "item anaction: anAction;"
		item anaction: anAction;
		/* XPECT errors ---	
		 	"An item usage must be typed by item definitions." at "item aportdef: APortDef;"
		 	"Features must have at least one type" at "item aportdef: APortDef;"
		--- */ 
		item aportdef: APortDef;
		/* XPECT errors ---
		 	"An item usage must be typed by item definitions." at "item aport: ABlock::aPort;"
		 	"Features must have at least one type" at "item aport: ABlock::aPort;"
		--- */
		item aport: ABlock::aPort;
		/* XPECT errors ---
		 "An item usage must be typed by item definitions." at "item apart: ABlock::aPart;"
		 "Features must have at least one type" at "item apart: ABlock::aPart;"
		--- */
		item apart: ABlock::aPart;
		// XPECT errors --> "An item usage must be typed by item definitions." at "item twoTypes: ABlock, APortDef;"
		item twoTypes: ABlock, APortDef;
	}
	attribute aValue: Real;
	part def ABlock {
		port aPort: APortDef;
		part aPart: ABlock;
	}
	action anAction;
	port def APortDef;
}